--- a/HoverBoardGigaDevice/Hoverboard.uvprojx
+++ b/HoverBoardGigaDevice/Hoverboard.uvprojx
@@ -10,14 +10,14 @@
       <TargetName>Target 1</TargetName>
       <ToolsetNumber>0x4</ToolsetNumber>
       <ToolsetName>ARM-ADS</ToolsetName>
-      <pCCUsed>5060750::V5.06 update 6 (build 750)::ARMCC</pCCUsed>
+      <pCCUsed>5060750::V5.06 update 6 (build 750)::.\ARMCCv506u6</pCCUsed>
       <uAC6>0</uAC6>
       <TargetOption>
         <TargetCommonOption>
           <Device>GD32F130C8</Device>
           <Vendor>GigaDevice</Vendor>
-          <PackID>GigaDevice.GD32F1x0_DFP.3.1.0</PackID>
-          <PackURL>http://gd32mcu.21ic.com/data/documents/yingyongruanjian/</PackURL>
+          <PackID>GigaDevice.GD32F1x0_DFP.3.2.0</PackID>
+          <PackURL>http://gd32mcu.com/data/documents/pack/</PackURL>
           <Cpu>IRAM(0x20000000,0x02000) IROM(0x08000000,0x10000) CPUTYPE("Cortex-M3") CLOCK(12000000) ELITTLE</Cpu>
           <FlashUtilSpec></FlashUtilSpec>
           <StartupFile></StartupFile>
@@ -184,6 +184,9 @@
             <hadXRAM>0</hadXRAM>
             <uocXRam>0</uocXRam>
             <RvdsVP>0</RvdsVP>
+            <RvdsMve>0</RvdsMve>
+            <RvdsCdeCp>0</RvdsCdeCp>
+            <nBranchProt>0</nBranchProt>
             <hadIRAM2>0</hadIRAM2>
             <hadIROM2>0</hadIROM2>
             <StupSel>8</StupSel>
@@ -350,7 +353,7 @@
             <NoWarn>0</NoWarn>
             <uSurpInc>0</uSurpInc>
             <useXO>0</useXO>
-            <uClangAs>0</uClangAs>
+            <ClangAsOpt>4</ClangAsOpt>
             <VariousControls>
               <MiscControls></MiscControls>
               <Define></Define>
@@ -602,24 +605,24 @@
     <files>
       <file attr="config" category="source" name="Device\Firmware\Peripherals\src\gd32f1x0_adc.c" version="3.1.0">
         <instance index="0">RTE\Device\GD32F130C8\gd32f1x0_adc.c</instance>
-        <component Cclass="Device" Cgroup="GD32F1x0_StdPeripherals" Csub="ADC" Cvendor="GigaDevice" Cversion="3.1.0" condition="GD32F1x0 STDPERIPHERALS RCU"/>
-        <package name="GD32F1x0_DFP" schemaVersion="1.1" url="http://gd32mcu.21ic.com/data/documents/yingyongruanjian/" vendor="GigaDevice" version="3.1.0"/>
+        <component Cclass="Device" Cgroup="GD32F1x0_StdPeripherals" Csub="ADC" Cvendor="GigaDevice" Cversion="3.2.0" condition="GD32F1x0 STDPERIPHERALS RCU"/>
+        <package name="GD32F1x0_DFP" schemaVersion="1.1" url="http://gd32mcu.com/data/documents/pack/" vendor="GigaDevice" version="3.2.0"/>
         <targetInfos>
           <targetInfo name="Target 1"/>
         </targetInfos>
       </file>
       <file attr="config" category="source" name="Device\Firmware\Peripherals\src\gd32f1x0_dbg.c" version="3.1.0">
         <instance index="0">RTE\Device\GD32F130C8\gd32f1x0_dbg.c</instance>
-        <component Cclass="Device" Cgroup="GD32F1x0_StdPeripherals" Csub="MCUDBG" Cvendor="GigaDevice" Cversion="3.1.0" condition="GD32F1x0 STDPERIPHERALS RCU"/>
-        <package name="GD32F1x0_DFP" schemaVersion="1.1" url="http://gd32mcu.21ic.com/data/documents/yingyongruanjian/" vendor="GigaDevice" version="3.1.0"/>
+        <component Cclass="Device" Cgroup="GD32F1x0_StdPeripherals" Csub="MCUDBG" Cvendor="GigaDevice" Cversion="3.2.0" condition="GD32F1x0 STDPERIPHERALS RCU"/>
+        <package name="GD32F1x0_DFP" schemaVersion="1.1" url="http://gd32mcu.com/data/documents/pack/" vendor="GigaDevice" version="3.2.0"/>
         <targetInfos>
           <targetInfo name="Target 1"/>
         </targetInfos>
       </file>
       <file attr="config" category="source" name="Device\Firmware\Peripherals\src\gd32f1x0_dma.c" version="3.1.0">
         <instance index="0">RTE\Device\GD32F130C8\gd32f1x0_dma.c</instance>
-        <component Cclass="Device" Cgroup="GD32F1x0_StdPeripherals" Csub="DMA" Cvendor="GigaDevice" Cversion="3.1.0" condition="GD32F1x0 STDPERIPHERALS RCU"/>
-        <package name="GD32F1x0_DFP" schemaVersion="1.1" url="http://gd32mcu.21ic.com/data/documents/yingyongruanjian/" vendor="GigaDevice" version="3.1.0"/>
+        <component Cclass="Device" Cgroup="GD32F1x0_StdPeripherals" Csub="DMA" Cvendor="GigaDevice" Cversion="3.2.0" condition="GD32F1x0 STDPERIPHERALS RCU"/>
+        <package name="GD32F1x0_DFP" schemaVersion="1.1" url="http://gd32mcu.com/data/documents/pack/" vendor="GigaDevice" version="3.2.0"/>
         <targetInfos>
           <targetInfo name="Target 1"/>
         </targetInfos>
@@ -632,109 +635,118 @@
       </file>
       <file attr="config" category="source" name="Device\Firmware\Peripherals\src\gd32f1x0_fwdgt.c" version="3.1.0">
         <instance index="0">RTE\Device\GD32F130C8\gd32f1x0_fwdgt.c</instance>
-        <component Cclass="Device" Cgroup="GD32F1x0_StdPeripherals" Csub="FWDGT" Cvendor="GigaDevice" Cversion="3.1.0" condition="GD32F1x0 STDPERIPHERALS RCU"/>
-        <package name="GD32F1x0_DFP" schemaVersion="1.1" url="http://gd32mcu.21ic.com/data/documents/yingyongruanjian/" vendor="GigaDevice" version="3.1.0"/>
+        <component Cclass="Device" Cgroup="GD32F1x0_StdPeripherals" Csub="FWDGT" Cvendor="GigaDevice" Cversion="3.2.0" condition="GD32F1x0 STDPERIPHERALS RCU"/>
+        <package name="GD32F1x0_DFP" schemaVersion="1.1" url="http://gd32mcu.com/data/documents/pack/" vendor="GigaDevice" version="3.2.0"/>
         <targetInfos>
           <targetInfo name="Target 1"/>
         </targetInfos>
       </file>
       <file attr="config" category="source" name="Device\Firmware\Peripherals\src\gd32f1x0_gpio.c" version="3.1.0">
         <instance index="0">RTE\Device\GD32F130C8\gd32f1x0_gpio.c</instance>
-        <component Cclass="Device" Cgroup="GD32F1x0_StdPeripherals" Csub="GPIO" Cvendor="GigaDevice" Cversion="3.1.0" condition="GD32F1x0 STDPERIPHERALS RCU"/>
-        <package name="GD32F1x0_DFP" schemaVersion="1.1" url="http://gd32mcu.21ic.com/data/documents/yingyongruanjian/" vendor="GigaDevice" version="3.1.0"/>
+        <component Cclass="Device" Cgroup="GD32F1x0_StdPeripherals" Csub="GPIO" Cvendor="GigaDevice" Cversion="3.2.0" condition="GD32F1x0 STDPERIPHERALS RCU"/>
+        <package name="GD32F1x0_DFP" schemaVersion="1.1" url="http://gd32mcu.com/data/documents/pack/" vendor="GigaDevice" version="3.2.0"/>
         <targetInfos>
           <targetInfo name="Target 1"/>
         </targetInfos>
       </file>
       <file attr="config" category="source" name="Device\Firmware\Peripherals\src\gd32f1x0_i2c.c" version="3.1.0">
         <instance index="0">RTE\Device\GD32F130C8\gd32f1x0_i2c.c</instance>
-        <component Cclass="Device" Cgroup="GD32F1x0_StdPeripherals" Csub="I2C" Cvendor="GigaDevice" Cversion="3.1.0" condition="GD32F1x0 STDPERIPHERALS RCU"/>
-        <package name="GD32F1x0_DFP" schemaVersion="1.1" url="http://gd32mcu.21ic.com/data/documents/yingyongruanjian/" vendor="GigaDevice" version="3.1.0"/>
+        <component Cclass="Device" Cgroup="GD32F1x0_StdPeripherals" Csub="I2C" Cvendor="GigaDevice" Cversion="3.2.0" condition="GD32F1x0 STDPERIPHERALS RCU"/>
+        <package name="GD32F1x0_DFP" schemaVersion="1.1" url="http://gd32mcu.com/data/documents/pack/" vendor="GigaDevice" version="3.2.0"/>
         <targetInfos>
           <targetInfo name="Target 1"/>
         </targetInfos>
       </file>
       <file attr="config" category="source" name="Device\Firmware\Peripherals\src\gd32f1x0_misc.c" version="3.1.0">
         <instance index="0">RTE\Device\GD32F130C8\gd32f1x0_misc.c</instance>
-        <component Cclass="Device" Cgroup="GD32F1x0_StdPeripherals" Csub="MISC" Cvendor="GigaDevice" Cversion="3.1.0" condition="GD32F1x0 CMSIS"/>
-        <package name="GD32F1x0_DFP" schemaVersion="1.1" url="http://gd32mcu.21ic.com/data/documents/yingyongruanjian/" vendor="GigaDevice" version="3.1.0"/>
+        <component Cclass="Device" Cgroup="GD32F1x0_StdPeripherals" Csub="MISC" Cvendor="GigaDevice" Cversion="3.2.0" condition="GD32F1x0 CMSIS"/>
+        <package name="GD32F1x0_DFP" schemaVersion="1.1" url="http://gd32mcu.com/data/documents/pack/" vendor="GigaDevice" version="3.2.0"/>
         <targetInfos>
           <targetInfo name="Target 1"/>
         </targetInfos>
       </file>
       <file attr="config" category="source" name="Device\Firmware\Peripherals\src\gd32f1x0_opa.c" version="3.1.0">
         <instance index="0">RTE\Device\GD32F130C8\gd32f1x0_opa.c</instance>
-        <component Cclass="Device" Cgroup="GD32F1x0_StdPeripherals" Csub="OPA" Cvendor="GigaDevice" Cversion="3.1.0" condition="GD32F1x0 STDPERIPHERALS RCU"/>
-        <package name="GD32F1x0_DFP" schemaVersion="1.1" url="http://gd32mcu.21ic.com/data/documents/yingyongruanjian/" vendor="GigaDevice" version="3.1.0"/>
+        <component Cclass="Device" Cgroup="GD32F1x0_StdPeripherals" Csub="OPA" Cvendor="GigaDevice" Cversion="3.2.0" condition="GD32F1x0 STDPERIPHERALS RCU"/>
+        <package name="GD32F1x0_DFP" schemaVersion="1.1" url="http://gd32mcu.com/data/documents/pack/" vendor="GigaDevice" version="3.2.0"/>
         <targetInfos>
           <targetInfo name="Target 1"/>
         </targetInfos>
       </file>
       <file attr="config" category="source" name="Device\Firmware\Peripherals\src\gd32f1x0_pmu.c" version="3.1.0">
         <instance index="0">RTE\Device\GD32F130C8\gd32f1x0_pmu.c</instance>
-        <component Cclass="Device" Cgroup="GD32F1x0_StdPeripherals" Csub="PMU" Cvendor="GigaDevice" Cversion="3.1.0" condition="GD32F1x0 STDPERIPHERALS RCU"/>
-        <package name="GD32F1x0_DFP" schemaVersion="1.1" url="http://gd32mcu.21ic.com/data/documents/yingyongruanjian/" vendor="GigaDevice" version="3.1.0"/>
+        <component Cclass="Device" Cgroup="GD32F1x0_StdPeripherals" Csub="PMU" Cvendor="GigaDevice" Cversion="3.2.0" condition="GD32F1x0 STDPERIPHERALS RCU"/>
+        <package name="GD32F1x0_DFP" schemaVersion="1.1" url="http://gd32mcu.com/data/documents/pack/" vendor="GigaDevice" version="3.2.0"/>
         <targetInfos>
           <targetInfo name="Target 1"/>
         </targetInfos>
       </file>
       <file attr="config" category="source" name="Device\Firmware\Peripherals\src\gd32f1x0_rcu.c" version="3.1.0">
         <instance index="0">RTE\Device\GD32F130C8\gd32f1x0_rcu.c</instance>
-        <component Cclass="Device" Cgroup="GD32F1x0_StdPeripherals" Csub="RCU" Cvendor="GigaDevice" Cversion="3.1.0" condition="GD32F1x0 STDPERIPHERALS MISC"/>
-        <package name="GD32F1x0_DFP" schemaVersion="1.1" url="http://gd32mcu.21ic.com/data/documents/yingyongruanjian/" vendor="GigaDevice" version="3.1.0"/>
+        <component Cclass="Device" Cgroup="GD32F1x0_StdPeripherals" Csub="RCU" Cvendor="GigaDevice" Cversion="3.2.0" condition="GD32F1x0 STDPERIPHERALS MISC"/>
+        <package name="GD32F1x0_DFP" schemaVersion="1.1" url="http://gd32mcu.com/data/documents/pack/" vendor="GigaDevice" version="3.2.0"/>
         <targetInfos>
           <targetInfo name="Target 1"/>
         </targetInfos>
       </file>
       <file attr="config" category="source" name="Device\Firmware\Peripherals\src\gd32f1x0_syscfg.c" version="3.1.0">
         <instance index="0">RTE\Device\GD32F130C8\gd32f1x0_syscfg.c</instance>
-        <component Cclass="Device" Cgroup="GD32F1x0_StdPeripherals" Csub="SYSCFG" Cvendor="GigaDevice" Cversion="3.1.0" condition="GD32F1x0 STDPERIPHERALS RCU"/>
-        <package name="GD32F1x0_DFP" schemaVersion="1.1" url="http://gd32mcu.21ic.com/data/documents/yingyongruanjian/" vendor="GigaDevice" version="3.1.0"/>
+        <component Cclass="Device" Cgroup="GD32F1x0_StdPeripherals" Csub="SYSCFG" Cvendor="GigaDevice" Cversion="3.2.0" condition="GD32F1x0 STDPERIPHERALS RCU"/>
+        <package name="GD32F1x0_DFP" schemaVersion="1.1" url="http://gd32mcu.com/data/documents/pack/" vendor="GigaDevice" version="3.2.0"/>
         <targetInfos>
           <targetInfo name="Target 1"/>
         </targetInfos>
       </file>
       <file attr="config" category="source" name="Device\Firmware\Peripherals\src\gd32f1x0_timer.c" version="3.1.0">
         <instance index="0">RTE\Device\GD32F130C8\gd32f1x0_timer.c</instance>
-        <component Cclass="Device" Cgroup="GD32F1x0_StdPeripherals" Csub="TIMER" Cvendor="GigaDevice" Cversion="3.1.0" condition="GD32F1x0 STDPERIPHERALS RCU"/>
-        <package name="GD32F1x0_DFP" schemaVersion="1.1" url="http://gd32mcu.21ic.com/data/documents/yingyongruanjian/" vendor="GigaDevice" version="3.1.0"/>
+        <component Cclass="Device" Cgroup="GD32F1x0_StdPeripherals" Csub="TIMER" Cvendor="GigaDevice" Cversion="3.2.0" condition="GD32F1x0 STDPERIPHERALS RCU"/>
+        <package name="GD32F1x0_DFP" schemaVersion="1.1" url="http://gd32mcu.com/data/documents/pack/" vendor="GigaDevice" version="3.2.0"/>
         <targetInfos>
           <targetInfo name="Target 1"/>
         </targetInfos>
       </file>
       <file attr="config" category="source" name="Device\Firmware\Peripherals\src\gd32f1x0_usart.c" version="3.1.0">
         <instance index="0">RTE\Device\GD32F130C8\gd32f1x0_usart.c</instance>
-        <component Cclass="Device" Cgroup="GD32F1x0_StdPeripherals" Csub="USART" Cvendor="GigaDevice" Cversion="3.1.0" condition="GD32F1x0 STDPERIPHERALS RCU"/>
-        <package name="GD32F1x0_DFP" schemaVersion="1.1" url="http://gd32mcu.21ic.com/data/documents/yingyongruanjian/" vendor="GigaDevice" version="3.1.0"/>
+        <component Cclass="Device" Cgroup="GD32F1x0_StdPeripherals" Csub="USART" Cvendor="GigaDevice" Cversion="3.2.0" condition="GD32F1x0 STDPERIPHERALS RCU"/>
+        <package name="GD32F1x0_DFP" schemaVersion="1.1" url="http://gd32mcu.com/data/documents/pack/" vendor="GigaDevice" version="3.2.0"/>
         <targetInfos>
           <targetInfo name="Target 1"/>
         </targetInfos>
       </file>
       <file attr="config" category="source" name="Device\Firmware\Peripherals\src\gd32f1x0_wwdgt.c" version="3.1.0">
         <instance index="0">RTE\Device\GD32F130C8\gd32f1x0_wwdgt.c</instance>
-        <component Cclass="Device" Cgroup="GD32F1x0_StdPeripherals" Csub="WWDGT" Cvendor="GigaDevice" Cversion="3.1.0" condition="GD32F1x0 STDPERIPHERALS RCU"/>
-        <package name="GD32F1x0_DFP" schemaVersion="1.1" url="http://gd32mcu.21ic.com/data/documents/yingyongruanjian/" vendor="GigaDevice" version="3.1.0"/>
+        <component Cclass="Device" Cgroup="GD32F1x0_StdPeripherals" Csub="WWDGT" Cvendor="GigaDevice" Cversion="3.2.0" condition="GD32F1x0 STDPERIPHERALS RCU"/>
+        <package name="GD32F1x0_DFP" schemaVersion="1.1" url="http://gd32mcu.com/data/documents/pack/" vendor="GigaDevice" version="3.2.0"/>
         <targetInfos>
           <targetInfo name="Target 1"/>
         </targetInfos>
       </file>
       <file attr="config" category="source" condition="Compiler ARMCC" name="Device\Source\startup_gd32f1x0.s" version="3.1.0">
         <instance index="0">RTE\Device\GD32F130C8\startup_gd32f1x0.s</instance>
-        <component Cclass="Device" Cgroup="Startup" Cvendor="GigaDevice" Cversion="3.1.0" condition="GD32F1x0 CMSIS"/>
-        <package name="GD32F1x0_DFP" schemaVersion="1.1" url="http://gd32mcu.21ic.com/data/documents/yingyongruanjian/" vendor="GigaDevice" version="3.1.0"/>
+        <component Cclass="Device" Cgroup="Startup" Cvendor="GigaDevice" Cversion="3.2.0" condition="GD32F1x0 CMSIS"/>
+        <package name="GD32F1x0_DFP" schemaVersion="1.1" url="http://gd32mcu.com/data/documents/pack/" vendor="GigaDevice" version="3.2.0"/>
         <targetInfos>
           <targetInfo name="Target 1"/>
         </targetInfos>
       </file>
       <file attr="config" category="source" name="Device\Source\system_gd32f1x0.c" version="3.1.0">
         <instance index="0">RTE\Device\GD32F130C8\system_gd32f1x0.c</instance>
-        <component Cclass="Device" Cgroup="Startup" Cvendor="GigaDevice" Cversion="3.1.0" condition="GD32F1x0 CMSIS"/>
-        <package name="GD32F1x0_DFP" schemaVersion="1.1" url="http://gd32mcu.21ic.com/data/documents/yingyongruanjian/" vendor="GigaDevice" version="3.1.0"/>
+        <component Cclass="Device" Cgroup="Startup" Cvendor="GigaDevice" Cversion="3.2.0" condition="GD32F1x0 CMSIS"/>
+        <package name="GD32F1x0_DFP" schemaVersion="1.1" url="http://gd32mcu.com/data/documents/pack/" vendor="GigaDevice" version="3.2.0"/>
         <targetInfos>
           <targetInfo name="Target 1"/>
         </targetInfos>
       </file>
     </files>
   </RTE>
+
+  <LayerInfo>
+    <Layers>
+      <Layer>
+        <LayName>Hoverboard</LayName>
+        <LayPrjMark>1</LayPrjMark>
+      </Layer>
+    </Layers>
+  </LayerInfo>
 
 </Project>
